docs(MD:Git): README and github assets
This change adds a readme template as well as issue templates for a bug report and a feature request. Also updates the .gitignore to ignore files from goland.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,15 @@
-# If you prefer the allow list template instead of the deny list, see community template:
-# https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
-#
+
+
+# User-specific stuff
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+.idea/**/usage.statistics.xml
+.idea/**/dictionaries
+.idea/**/shelf
+
+# AWS User-specific
+.idea/**/aws.xml
+
 # Binaries for programs and plugins
 *.exe
 *.exe~
